--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,9 +4,10 @@ auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_enabled=true
 auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_enabled=true
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=true
 auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_path=protected/tests/bootstrap.php
+file.reference.yii-framework=../yii/framework
 include.path=\
     ${php.global.include.path}:\
-    C:\\xampp\\htdocs\\yii\\framework\\
+    ${file.reference.yii-framework}
 php.version=PHP_54
 source.encoding=UTF-8
 src.dir=.
